samples/_failures_safe/1761157296_caf1bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ffc333d.c: In function ‘main’:
./samples/SAFE/__tmp_3ffc333d.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_3ffc333d.c:140:9: error: expected declaration or statement at end of input
